--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -8,6 +8,7 @@
         <Compile Include="q1.fs"/>
         <Compile Include="q2.fs"/>
         <Compile Include="q3.fs"/>
+        <Compile Include="q4.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
