trash. But working trash :-)

--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="q3.fs"/>
         <Compile Include="q4.fs" />
         <Compile Include="q5.fs" />
+        <Compile Include="q6.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
