--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="q4.fs" />
         <Compile Include="q5.fs" />
         <Compile Include="q6.fs" />
+        <Compile Include="q7.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
