--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -14,6 +14,7 @@
         <Compile Include="q7.fs" />
         <Compile Include="q8.fs" />
         <Compile Include="Q9.fs" />
+        <Compile Include="Q10.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
