--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -15,6 +15,7 @@
         <Compile Include="q8.fs" />
         <Compile Include="Q9.fs" />
         <Compile Include="Q10.fs" />
+        <Compile Include="Q11.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
