--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -16,6 +16,7 @@
         <Compile Include="Q9.fs" />
         <Compile Include="Q10.fs" />
         <Compile Include="Q11.fs" />
+        <Compile Include="Q12.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
