--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>8.0</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="utils.fs"/>
@@ -20,6 +21,7 @@
         <Compile Include="Q13.fs" />
         <Compile Include="Q14.fs" />
         <Compile Include="Q15.fs" />
+        <Compile Include="Q16.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
