--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -22,6 +22,9 @@
         <Compile Include="Q14.fs" />
         <Compile Include="Q15.fs" />
         <Compile Include="Q16.fs" />
+        <Compile Include="Q17.fs" />
+        <Compile Include="Q18.fs" />
+        <Compile Include="Q19.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
