a whole lot of meh and excele

--- a/advent2023.fsproj
+++ b/advent2023.fsproj
@@ -26,6 +26,7 @@
         <Compile Include="Q18.fs" />
         <Compile Include="Q19.fs" />
         <Compile Include="Q20.fs" />
+        <Compile Include="Q21.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
     <ItemGroup>
